--- a/CSS/CSS_1_index.html
+++ b/CSS/CSS_1_index.html
@@ -5,21 +5,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS level 1</title>
+    <title>CSS part 1</title>
 
     <!--Linking CSS file-->
-    <link rel="stylesheet" href="CSS_lvl1_style.css">
+    <link rel="stylesheet" href="CSS_1_style.css">
 
 </head>
 
 <body>
     <h1>This is a heading.</h1>
     <p>Here is an ordered list:-</p>
-        <ol>
-            <li>Item one</li>
-            <li>Item two</li>
-            <li>Item three</li>
-        </ol>
+    <ol>
+        <li>Item one</li>
+        <li>Item two</li>
+        <li>Item three</li>
+    </ol>
     <h4>This is another heading.</h4>
 
     <!-- Classes need not be unique -->
@@ -41,13 +41,13 @@
     <p id="para2">I am also a paragraph.</p>
 
     <p>Here is an unordered list:-</p>
-        <ul>
-            <li>Item</li>
-            <li>Item</li>
-            <li>Item</li>
-            <li><a href="https://www.youtube.com/">YouTube</a></li>
-        </ul>
-    
+    <ul>
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+        <li><a href="https://www.youtube.com/">YouTube</a></li>
+    </ul>
+
     <p>Specificity</p>
     <!-- ID > class > normal tag -->
     <ol>
