--- a/CSS/CSS_2_index.html
+++ b/CSS/CSS_2_index.html
@@ -5,8 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS level 2 part 1</title>
-    <link rel="stylesheet" href="CSS_lvl2_part1_style.css">
+    <title>CSS part 2</title>
+    <link rel="stylesheet" href="CSS_2_style.css">
 
     <!-- Linking a font from 'fonts.google.com' -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,14 +17,18 @@
 
 <body>
     <h1>Heading one</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam perspiciatis voluptates cumque doloremque temporibus dolore quae corrupti eaque cupiditate dolores quis consequuntur, eos neque praesentium nostrum excepturi tempora, nobis vitae.</p>
-    <p id="second_para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus in tempore minima eius molestiae, distinctio quibusdam ratione voluptate voluptates, ut nobis iste quaerat ipsam veritatis voluptatum laboriosam dicta maiores perspiciatis.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam perspiciatis voluptates cumque doloremque
+        temporibus dolore quae corrupti eaque cupiditate dolores quis consequuntur, eos neque praesentium nostrum
+        excepturi tempora, nobis vitae.</p>
+    <p id="second_para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus in tempore minima eius
+        molestiae, distinctio quibusdam ratione voluptate voluptates, ut nobis iste quaerat ipsam veritatis voluptatum
+        laboriosam dicta maiores perspiciatis.</p>
 
     <!-- CSS box model -->
     <h1>CSS box model</h1>
     <img id="box_model" src="boxmodel1.png" width="600" height="400">
     <img id="box_model" src="boxmodel2.png" width="600" height="500">
-    
+
 </body>
 
 </html>
