--- a/CSS/CSS_3_index.html
+++ b/CSS/CSS_3_index.html
@@ -5,8 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS level 2 part 2</title>
-    <link rel="stylesheet" href="CSS_lvl2_part2_style.css">
+    <title>CSS part 3</title>
+    <link rel="stylesheet" href="CSS_3_style.css">
 </head>
 
 <body>
