--- a/HTML/HTML_1.html
+++ b/HTML/HTML_1.html
@@ -2,8 +2,9 @@
 <html>
 
 <!-- Type anything and then press 'ctrl' + '/' to make it a comment -->
+
 <head>
-    <title>HTML level 1</title>
+    <title>HTML part 1</title>
 </head>
 
 <body>
