--- a/Javascript/Javascript_3_index.html
+++ b/Javascript/Javascript_3_index.html
@@ -4,14 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript part 1</title>
-
-    <!-- Linking javascript file -->
-    <script src="Javascript_1_script.js"></script>
+    <title>Javascript part 3</title>
+    <script src="Javascript_3_script.js"></script>
 </head>
 
 <body>
-    <h1>Welcome to the bank!</h1>
+    <h1>Control flow</h1>
 </body>
 
 </html>
