--- a/HTML/HTML_1.html
+++ b/HTML/HTML_1.html
@@ -1,3 +1,21 @@
+<!-- Things between '<' and '>' are called 'tags' in HTML -->
+
+<!-- Boilerplate code for HTML :- -->
+
+<!-- Type 'html' and select second option ('html :5') to get the following boilerplate code :- -->
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html> -->
+
 <!DOCTYPE html>
 <html>
 
