--- a/HTML/HTML_1.html
+++ b/HTML/HTML_1.html
@@ -1,7 +1,7 @@
 <!-- Things between '<' and '>' are called 'tags' in HTML -->
 
 <!-- Boilerplate code for HTML :- -->
-
+<!-- It is the minimum required code for an HTMl file -->
 <!-- Type 'html' and select second option ('html :5') to get the following boilerplate code :- -->
 
 <!-- <!DOCTYPE html>
