--- a/HTML/HTML_1.html
+++ b/HTML/HTML_1.html
@@ -138,6 +138,7 @@
     <!--Anchor tag-->
     <a href="newpage.html">New page</a><br>
     <a href="https://www.youtube.com/">YouTube</a><br>
+    <!-- providing 'target' as '_blank' opens link in new tab -->
     <a href="https://github.com/" target="_blank">GitHub</a><br>
 
     <!--Images-->
