--- a/HTML/HTML_1.html
+++ b/HTML/HTML_1.html
@@ -63,6 +63,9 @@
         <!--Italics-->
         <p><i>Old italics</i></p>
         <p><em>New italics</em></p>
+
+        <!--Delete tag-->
+        <del>Deleted text</del>
     </section>
 
     <!--Lists-->
@@ -137,8 +140,11 @@
 
     <!--Anchor tag-->
     <a href="newpage.html">New page</a><br>
-    <a href="https://www.youtube.com/">YouTube</a><br>
-    <!-- providing 'target' as '_blank' opens link in new tab -->
+    <!--'br' : Line break-->
+    <a href="https://www.youtube.com/">YouTube</a>
+    <hr>
+    <!--'hr' : Line break with line-->
+    <!--providing 'target' as '_blank' opens link in new tab-->
     <a href="https://github.com/" target="_blank">GitHub</a><br>
 
     <!--Images-->
