--- a/HTML/HTML_2.html
+++ b/HTML/HTML_2.html
@@ -7,7 +7,7 @@
 
 <body>
     <!--Tables-->
-    <table border="1">
+    <table border="1px">
         <thead>
             <th>Heading 1</th>
             <th>Heading 2</th>
