--- a/HTML/HTML_1.html
+++ b/HTML/HTML_1.html
@@ -147,6 +147,9 @@
     <!--providing 'target' as '_blank' opens link in new tab-->
     <a href="https://github.com/" target="_blank">GitHub</a><br>
 
+    <!--iframe link-->
+    <iframe src="https://www.mec.ac.in/" title="MEC" frameborder="1"></iframe><br>
+
     <!--Images-->
     <img src="bliss.jpg" alt="Image not found!"><br>
     <img src="missing.jpg" alt="Image not found!"><br>
@@ -154,6 +157,24 @@
         <img src="https://geekofcoding.files.wordpress.com/2020/09/images.png" alt="Image not found!">
         <figcaption>HTML</figcaption>
     </figure>
+
+    <!--Video tag-->
+    <video controls muted>
+        <source src="http://techslides.com/demos/samples/sample.mp4">
+    </video><br>
+
+    <!--Youtube video player-->
+    <!--Use the iframe link under share>embe-->
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/jNQXAC9IVRw?si=iPSKfccFS6aftD5P"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen>
+    </iframe><br>
+
+    <!--Audio tag-->
+    <audio controls>
+        <source src="http://techslides.com/demos/samples/sample.mp3">
+    </audio><br>
 </body>
 
 </html>
